# AEAC2026

./: .clang-format  .gitignore  compObjectives.md  readme.md
.credentials/: credentials.json
.devcontainer/: Dockerfile  compose.base.yml  compose.linux-NVIDIA.yml  compose.linux-nonNVIDIA.yml  compose.linux.yml  compose.macos.yml  compose.wsl.yml  devcontainer.json  format-all.sh  initialize.sh  postCreate.sh  postStart.sh
.github/workflows/: docker_build_test.yml
deployment/: compose.deployment.yml  compose.drive.yml  compose.hardware.yml  compose.mission.yml  compose.perception.yml  compose.uxrce.yml
docker-dev/: Dockerfile  runContainer.sh
docker-dev-mac/: Dockerfile
drive/: upload_photo.py
drive_uploader/: package.xml  setup.cfg  setup.py
gz_worlds/: aeac.sdf  generate_world.py  testing_room-params.xml
perception/: circle_processing.py  detector_worker.py  extract_training_frames.py  logbook.md  record_svo.py  upload_to_roboflow.py  validate_svo.py
perception/docs/: ZedX_Mini_Orin_Nano_Reference.xlsx  detector_pipeline.html  issues.md  learnings.md  logbook.md  perception_bible.xlsx  yolo_pipeline.html
perception/zed-positional-measurement/: .gitignore
perception/zed-positional-measurement/docs/: LucasHandoff.md  Operations.md  PRD.md  README.md  Schema.md  Technical.md  Uncertainties.md  Validation.md
perception/zed-positional-measurement/src/zed_positional_measurement/: __init__.py  cli.py  config.py  exporters.py  geometry.py  metrics.py  models.py  pipeline.py  providers.py  sdk.py  storage.py
perception/zed-positional-measurement/test-output/exporters/: measurements.csv
perception/zed-positional-measurement/test-output/pipeline-export-stream/session-stream/: session.json
perception/zed-positional-measurement/test-output/pipeline-export-stream/session-stream/cache/segment-00001/: frames.final.jsonl  poses.final.jsonl  segment.json
perception/zed-positional-measurement/test-output/pipeline-export-stream/session-stream/exports/: measurements.csv  measurements.jsonl
perception/zed-positional-measurement/test-output/pipeline-no-svo/session-no-svo/: session.json
perception/zed-positional-measurement/test-output/pipeline-resume/session-c/: session.json
perception/zed-positional-measurement/test-output/pipeline-resume/session-c/cache/segment-00001/: poses.provisional.jsonl  segment.json
perception/zed-positional-measurement/test-output/pipeline-resume/session-c/cache/segment-00002/: segment.json
perception/zed-positional-measurement/test-output/pipeline-resume/session-c/stream/: frames.jsonl
perception/zed-positional-measurement/test-output/pipeline-scene-probes/session-probes/: session.json
perception/zed-positional-measurement/test-output/pipeline-scene-probes/session-probes/cache/segment-00001/: frames.provisional.jsonl  measurements.provisional.jsonl  poses.provisional.jsonl  segment.json
perception/zed-positional-measurement/test-output/pipeline-segment/session-b/: session.json
perception/zed-positional-measurement/test-output/pipeline-segment/session-b/stream/: frames.jsonl
perception/zed-positional-measurement/test-output/storage/session-a/: session.json
perception/zed-positional-measurement/tests/: test_config.py  test_exporters.py  test_metrics.py  test_pipeline.py  test_storage.py
ros_examples_cpp/src/pubsub_01/src/: publisher_node.cpp  subscriber_node.cpp
ros_ws/.devcontainer/: devcontainer.json
ros_ws/src/flight_missions/: CMakeLists.txt  package.xml
ros_ws/src/flight_missions/mission_core/: CMakeLists.txt
ros_ws/src/flight_missions/mission_core/include/mission_core/: mission.hpp  operation_manager.hpp
ros_ws/src/flight_missions/mission_core/include/mission_core/utilities/: utilities.hpp
ros_ws/src/flight_missions/mission_core/src/: mission.cpp  operation_manager.cpp
ros_ws/src/flight_missions/mission_core/src/utilities/: utilities.cpp
ros_ws/src/flight_missions/mission_nodes/: CMakeLists.txt
ros_ws/src/flight_missions/mission_nodes/include/mission_nodes/: orbit_location.hpp  return_to_origin_v2.hpp
ros_ws/src/flight_missions/mission_nodes/src/: orbit_location.cpp  return_to_origin.cpp  return_to_origin_v2.cpp
ros_ws/src/flight_missions/src/missions/: return_to_origin.cpp
ros_ws/src/google_drive/: package.xml  setup.cfg  setup.py
ros_ws/src/google_drive/google_drive/: drive_service.py  drive_upload_node.py  drive_upload_node_SB.py  drive_upload_test_client.py  drive_uploader.py  drive_uploader_#2.py  generate_token.py  upload_photo.py
ros_ws/src/google_drive/google_drive/srv/: drive_uploader.srv
ros_ws/src/google_drive/launch/: drive_upload_test.launch.py
ros_ws/src/google_drive_interfaces/: CMakeLists.txt  package.xml
ros_ws/src/hardware_controllers/: package.xml  setup.cfg  setup.py
ros_ws/src/hardware_controllers/hardware_controllers/: gimbal_controller.py
ros_ws/src/navigation_core/: package.xml  setup.py
ros_ws/src/navigation_core/launch/: cmd_vel_test.launch.py  cmd_vel_to_px4.launch.py
ros_ws/src/navigation_core/navigation_core/: cmd_vel_test.py  cmd_vel_to_px4.py  pointcloud_manipulate.py
ros_ws/src/pubsub_01/: CMakeLists.txt
ros_ws/src/pubsub_01/src/: publisher_node.cpp  subscriber_node.cpp
ros_ws/src/px4_msgs/: CMakeLists.txt
ros_ws/src/px4_ros_com/: CMakeLists.txt
ros_ws/src/px4_ros_com/include/px4_ros_com/: frame_transforms.h
ros_ws/src/px4_ros_com/src/examples/advertisers/: debug_vect_advertiser.cpp
ros_ws/src/px4_ros_com/src/examples/listeners/: sensor_combined_listener.cpp  vehicle_gps_position_listener.cpp
ros_ws/src/px4_ros_com/src/examples/offboard/: offboard_control.cpp  offboard_control_srv.cpp
ros_ws/src/px4_ros_com/src/lib/: frame_transforms.cpp
ros_ws/src/px4_sample_cpp/: CMakeLists.txt  package.xml
ros_ws/src/px4_sample_cpp/src/: px4_example.cpp  px4_sample.cpp
ros_ws/src/px4_sample_cpp/src/mission/: return_to_origin.cpp
scripts/: deploy.sh  launchQGC.sh  manualCompose.sh  setupLinux.sh  simulateDepth.sh  simulateTask2.sh
wip/docker-qadt-dev/: Dockerfile
(+5 files in other folders)
