<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>google_drive</name>
  <version>0.0.0</version>
  <description>Upload to google drive</description>
  <maintainer email="anthonyjb5228@gmail.com">qadt</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>google_drive_interfaces</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-google-auth</exec_depend>
  <exec_depend>python3-google-auth-oauthlib</exec_depend>
  <exec_depend>python3-googleapi</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
