<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>hardware_controllers</name>
    <version>1.0.0</version>
    <description>Controls hardware onboard Jetson companion computer</description>
    <maintainer email="anthonyjb5228@gmail.com">qadt</maintainer>
    <license>Apache-2.0</license>

    <depend>rclpy</depend>
    <depend>geometry_msgs</depend>
    <depend>std_srvs</depend>

    <exec_depend>python3</exec_depend>

    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>