<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>navigation_core</name>
    <version>1.0.0</version>
    <description>Core navigation functionality for UAV</description>
    <maintainer email="anthonyjb5228@gmail.com">qadt</maintainer>
    <license>Apache-2.0</license>

    <depend>rclpy</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf_transformations</depend>
    <depend>launch</depend>

    <!-- May be useful -->
    <depend>laser_geometry</depend>
    <depend>pointcloud_to_laserscan</depend>

    <exec_depend>ros2launch</exec_depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>